--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -1,36 +1,95 @@
+.checkout-item__container:nth-last-child(2) {
+  &::before {
+    content: "";
+    position: absolute;
+    height: 1px;
+    width: 500px;
+    background-color: lightgray;
+    top: 152px;
+    left: 0;
+  }
+}
 .checkout-item {
   &__container {
-    display: grid;
-    width: 100vw;
-    grid-template-rows: repeat(2, max-content);
-    grid-template-columns: repeat(3, max-content);
+    width: 50rem;
+    display: flex;
+    position: relative;
+    margin: 0 auto;
+    &::after {
+      content: "";
+      position: absolute;
+      height: 1px;
+      width: 500px;
+      background-color: lightgray;
+      top: -8px;
+      left: 0;
+    }
+  }
+
+  &-1 {
+    width: 30vw;
+  }
+
+  &__quantity-remove-container {
+    display: flex;
   }
 
   &__image {
-    grid-row: 1/-1;
-    grid-column: 1/2;
     margin: 0 4rem;
   }
 
   &__title {
-    grid-row: 1/2;
-    grid-column: 2/3;
+    width: max-content;
+    color: var(--color-primary);
     font-size: 2rem;
-    margin-right: 13rem;
+    margin-bottom: 1.5rem;
+    margin-right: 26rem;
   }
 
   &__price {
+    color: red;
+    position: absolute;
+    right: 0;
     font-size: 2rem;
-    grid-row: 1/2;
-    grid-column: 3/3;
+
+    &-title {
+      position: absolute;
+      right: 0;
+      margin-top: -23px;
+    }
   }
 
   &__quantity {
+    color: var(--color-text-dark);
+
     &-title {
-      margin-left: 7px;
+      color: var(--color-primary-dark);
+      margin-left: 8px;
     }
   }
 
   &__remove {
+    color: var(--color-primary-dark);
+    position: relative;
+    margin-left: 3rem;
+    &::before {
+      content: "";
+      position: absolute;
+      height: 65%;
+      width: 1px;
+      background-color: lightgray;
+      top: 15px;
+      left: -17px;
+    }
+    &-button {
+      color: var(--color-text-dark);
+      font-size: 1.8rem;
+      margin-left: 8px;
+      cursor: pointer;
+    }
   }
+}
+
+.arrow {
+  color: var(--color-text-dark);
 }
