--- a/src/styles/base.styles.scss
+++ b/src/styles/base.styles.scss
@@ -1,6 +1,11 @@
 html {
   font-family: "Lato", sans-serif;
 }
+@media only screen and (max-width: 1030px) and (max-height: 610px) {
+  html {
+    font-size: 50%;
+  }
+}
 
 body {
   overflow-x: hidden;
