--- a/src/styles/my_normalize.css
+++ b/src/styles/my_normalize.css
@@ -1,6 +1,5 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
-
 /* Document
    ========================================================================== */
 
@@ -34,12 +33,10 @@ body {
   box-sizing: border-box;
   font-weight: 400;
   line-height: 1.7;
-
 }
 ul {
   list-style-type: none;
 }
-
 
 :any-link {
   text-decoration: none;
@@ -52,7 +49,6 @@ ul {
 main {
   display: block;
 }
-
 
 /* Grouping content
    ========================================================================== */
@@ -87,6 +83,10 @@ pre {
 
 a {
   background-color: transparent;
+}
+
+a:visited {
+  color: inherit;
 }
 
 /**
@@ -186,7 +186,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -196,7 +197,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
