--- a/src/pages/shop/shop.styles.scss
+++ b/src/pages/shop/shop.styles.scss
@@ -1,6 +1,7 @@
 .show-more {
   font-size: 2rem;
   text-align: center;
+  text-decoration: underline;
   &__title {
     font-size: 2rem;
     text-align: center;
