--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -27,5 +27,21 @@
   }
   &__details {
     margin: 0 2rem;
+    width: 10rem;
   }
+}
+
+.remove {
+  position: relative;
+  color: var(--color-primary-dark);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 2rem;
+  margin-top: 3px;
+}
+.remove-button {
+  color: var(--color-text-dark);
+  font-size: 1.5rem;
+  cursor: pointer;
 }
