--- a/src/styles/base.styles.scss
+++ b/src/styles/base.styles.scss
@@ -6,6 +6,16 @@ html {
     font-size: 50%;
   }
 }
+@media only screen and (max-width: 56.25em) {
+  html {
+    font-size: 45.5%;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  html {
+    font-size: 28.5%;
+  }
+}
 
 body {
   overflow-x: hidden;
