--- a/src/components/sign-in-sign-up/sign-in-sign-up.styles.scss
+++ b/src/components/sign-in-sign-up/sign-in-sign-up.styles.scss
@@ -1,4 +1,8 @@
 .sign-container {
   display: flex;
   justify-content: space-evenly;
+  @media only screen and (max-width: 37.5em) {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
 }
