--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -31,11 +31,11 @@
   width: 21rem;
   object-fit: contain;
   @media only screen and (max-width: 37.5em) {
-    height: 21rem;
-    width: 12rem;
+    // height: 21rem;
+    // width: 12rem;
   }
   @media only screen and (max-width: 25em) {
-    width: 10rem;
+    // width: 10rem;
   }
 }
 
