--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -23,6 +23,10 @@
       background-color: lightgray;
       top: -8px;
       left: 0;
+      @media only screen and (max-width: 37.5em) {
+        width: 700px;
+        left: -100px;
+      }
     }
   }
 
