--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  height: 5rem;
+  height: 80px;
   display: flex;
   align-items: center;
   background-color: #4fa6d8;
