checking to see if responsiviness is right

--- a/src/components/cart/cart.styles.scss
+++ b/src/components/cart/cart.styles.scss
@@ -16,6 +16,7 @@
   left: 48%;
   transform: rotate(27deg);
   @media only screen and (max-width: 37.5em) {
+    font-size: 1.8rem;
     top: -52%;
   }
 }
