--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -19,14 +19,24 @@
   &__img {
     height: 6rem;
     width: 6rem;
+    @media only screen and (max-width: 37.5em) {
+      height: 7rem;
+      width: 7rem;
+    }
   }
   &__name {
     font-size: 1.5rem;
+    @media only screen and (max-width: 37.5em) {
+      font-size: 1.8rem;
+    }
   }
 
   &__price {
     display: flex;
     justify-content: flex-start;
+    @media only screen and (max-width: 37.5em) {
+      font-size: 1.3rem;
+    }
   }
   &__details {
     margin: 0 2rem;
@@ -42,9 +52,15 @@
   align-items: center;
   margin-right: 2rem;
   margin-top: 3px;
+  @media only screen and (max-width: 37.5em) {
+    font-size: 1.5rem;
+  }
 }
 .remove-button {
   color: var(--color-text-dark);
   font-size: 1.5rem;
   cursor: pointer;
+  @media only screen and (max-width: 37.5em) {
+    font-size: 1.8rem;
+  }
 }
