--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -1,6 +1,10 @@
 .checkout-container {
   margin: 5rem 0;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .sub-total {
