aded more responsivness

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -6,8 +6,8 @@
   padding: 2rem;
   background-color: var(--color-background-light);
   border: 2px solid var(--color-primary);
-  height: 350px;
-  right: 25px;
+  height: 37rem;
+  right: 2rem;
   top: 61px;
   z-index: 5;
   animation-name: fadeIn;
@@ -20,7 +20,6 @@
 
 .cart-dropdown-button {
   margin-top: 2rem;
-  margin-top: auto;
 }
 
 .cart-items {
