--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -1,6 +1,7 @@
 .cart-item {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   padding: 1rem 0;
   &::before {
@@ -9,8 +10,13 @@
     left: 8%;
     height: 1px;
     width: 80%;
-    transform: translatey(-1rem);
+    transform: translatey(-4rem);
     background-color: rgba(0, 0, 0, 0.2);
+  }
+  &:nth-child(1) {
+    &::before {
+      display: none;
+    }
   }
 
   &__img {
@@ -54,10 +60,16 @@
   }
 }
 .remove-button {
+  margin-right: 1rem;
   color: var(--color-text-dark);
   font-size: 1.5rem;
   cursor: pointer;
   @media only screen and (max-width: 37.5em) {
     font-size: 1.8rem;
   }
+}
+
+.remove-arrow-container {
+  display: flex;
+  align-items: center;
 }
