created new images and compressed them to produxt items

--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -58,7 +58,7 @@
     &-title {
       position: absolute;
       right: 0;
-      margin-top: -23px;
+      margin-top: -2.3rem;
     }
   }
 
@@ -96,6 +96,6 @@
   color: var(--color-text-dark);
 }
 .card__img {
-  height: 11rem;
-  width: 11rem;
+  height: 8rem;
+  width: 8rem;
 }
