--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -11,6 +11,11 @@
   cursor: pointer;
   overflow: hidden;
   transition: all 300ms ease;
+  @media only screen and (max-width: 37.5em) {
+    background: var(--color-primary-dark);
+    transform: translateY(-0.1rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  }
 
   &:before {
     content: "";
@@ -43,9 +48,16 @@
   &:hover {
     color: black;
 
-    transform: translatey(-3px) scale(1.05);
+    transform: translateY(-3px) scale(1.05);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
     // font-weight: 900;
+    @media only screen and (max-width: 37.5em) {
+      transform: none;
+      box-shadow: none;
+      color: white;
+      background: var(--color-primary-dark);
+      transform: translateY(0);
+    }
   }
 }
 .social-btn {
