--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -10,11 +10,11 @@
   right: 2rem;
   top: 61px;
   z-index: 5;
-  animation-name: fadeIn;
-  transform-origin: top right;
-  animation-duration: 0.5s;
-  animation-timing-function: ease-out;
-  animation-fill-mode: forwards;
+  // animation-name: fadeIn;
+  // transform-origin: top right;
+  // animation-duration: 0.5s;
+  // animation-timing-function: ease-out;
+  // animation-fill-mode: forwards;
   overflow: hidden;
 }
 
