finishing touches to app

--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -27,7 +27,7 @@
 
   100% {
     color: var(--color-primary);
-    transform: rotate(0deg) translate(-36px, 7.6rem);
+    transform: rotate(0deg) translate(-36px, 9.7vh);
   }
 }
 @media only screen and (max-width: 1030px) and (max-height: 610px) {
@@ -39,7 +39,7 @@
 
     100% {
       color: var(--color-primary);
-      transform: rotate(0deg) translate(-36px, 8rem);
+      transform: rotate(0deg) translate(-36px, 13vh);
     }
   }
 }
